--- a/package.json
+++ b/package.json
@@ -3,10 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@auth0/auth0-react": "^1.10.2",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "classnames": "^2.3.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-oauth2-jwt-bearer": "^1.1.0",
@@ -14,15 +16,21 @@
     "mongodb": "^4.7.0",
     "mongoose": "^6.4.2",
     "morgan": "^1.10.0",
+    "npm-run-all": "^4.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "rsuite": "^5.15.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "api-server": "node api-server.ts",
+    "server": "node server.js",
+    "server:dev": "nodemon server.js",
+    "api-server": "node api-server.js",
     "api-server:dev": "nodemon api-server.js",
+    "prod": "npm-run-all --parallel server api-server",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
