--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "start": "react-scripts start",
     "server": "node server.js",
     "server:dev": "nodemon server.js",
-    "api-server": "node api-server.js",
-    "api-server:dev": "nodemon api-server.js",
+    "api-server": "node ./api/api-server.js",
+    "api-server:dev": "nodemon ./api/api-server.js",
     "prod": "npm-run-all --parallel server api-server",
     "build": "react-scripts build",
     "test": "react-scripts test",
